feat: add PUT department route
